Further update Java throughout